Fixed border bug and Arrow in corner
Bug relied on too much value in padding
Added image arrow on starting field

--- a/monopoly-app/src/styles/EastateLevel.css
+++ b/monopoly-app/src/styles/EastateLevel.css
@@ -1,5 +1,4 @@
 .eastateLevel {
-  position: fixed;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
